--- a/resources/package.json
+++ b/resources/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "axios": "0.19.2",
+    "bowser": "1.9.4",
     "core-js": "3.6.5",
     "detect-port": "^1.2.1",
     "fetch-polyfill": "^0.8.2",
@@ -51,6 +52,7 @@
     "vue": "^2.2.5",
     "vue-i18n-manager": "^3.2.2",
     "vue-router": "^3.4.1",
+    "vue-transition-component": "^3.0.11",
     "vue-types": "^1.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
