--- a/resources/package.json
+++ b/resources/package.json
@@ -50,6 +50,7 @@
     "seng-device-state-tracker": "^1.1.4",
     "seng-scss": "^1.2.5",
     "vue": "^2.2.5",
+    "vue-core-video-player": "^0.2.0",
     "vue-i18n-manager": "^3.2.2",
     "vue-router": "^3.4.1",
     "vue-transition-component": "^3.0.11",
