--- a/resources/package.json
+++ b/resources/package.json
@@ -42,6 +42,7 @@
     "lodash": "^4.17.4",
     "mini-css-extract-plugin": "0.9.0",
     "modernizr": "^3.3.1",
+    "moment": "^2.29.1",
     "normalize.css": "^8.0.0",
     "open": "^7.1.0",
     "postcss-safe-parser": "^4.0.1",
